<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout
  android:layout_height="wrap_content" 
  android:layout_width="match_parent"
  android:orientation="vertical">
  
  <TextView android:id="@+id/textView1" 
      android:layout_width="wrap_content" 
      android:layout_height="wrap_content" 
      android:text="@string/select_image">
  </TextView>
    <LinearLayout android:layout_height="wrap_content" 
        android:orientation="horizontal" 
        android:id="@+id/linearLayout1" 
        android:layout_width="match_parent" 
        android:baselineAligned="false">
	    
	    <Button android:layout_width="fill_parent" 
	        android:layout_height="wrap_content" 
	        android:layout_weight="50" 
	        android:text="@string/stare_capture_image" 
	        android:id="@+id/startCaptureBtn" 
	        android:visibility="gone">   
	    </Button>
	    
	    <Button android:layout_height="wrap_content" 
	        android:layout_weight="50" 
	        android:text="@string/stare_capture_image" 
	        android:id="@+id/startCaptureBtn2" 
	        android:layout_width="match_parent">
	    </Button>
	    
	    <Button android:id="@+id/loadFile" 
	        android:layout_weight="50" 
	        android:layout_height="wrap_content" 
	        android:text="@string/loadImage" 
	        android:layout_width="fill_parent">
	    </Button>
	    
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" 
        android:id="@+id/linearLayout2" 
        android:layout_width="match_parent"  
        android:orientation="vertical">
	    
	    <ImageView android:layout_height="wrap_content" 
	        android:id="@+id/selectedImageView" 
	        android:layout_width="match_parent" 
	        android:src="@drawable/icon">
	    </ImageView>
	    
	    <TextView android:id="@+id/textView2" 
	        android:layout_width="wrap_content" 
	        android:layout_height="wrap_content" 
	        android:text="@string/image_time" 
	        android:layout_marginTop="10dip" 
	        android:layout_marginBottom="10dip">
	    </TextView>
	    
	    <LinearLayout android:layout_height="wrap_content" 
	        android:layout_width="match_parent" 
	        android:orientation="horizontal">
	        
	        <TextView android:text="@string/time_year" 
	            android:layout_height="wrap_content" 
	            android:layout_width="match_parent" 
	            android:id="@+id/textView5" 
	            android:layout_weight="50">
	        </TextView>
	        
	        <Spinner android:id="@+id/spinnerYear" 
	            android:layout_width="match_parent" 
	            android:layout_height="wrap_content" 
	            android:layout_weight="30">
	        </Spinner>
	        
	    </LinearLayout>
	    <LinearLayout android:layout_height="wrap_content" 
	        android:layout_width="match_parent" 
	        android:orientation="horizontal">
	        
	        <TextView android:text="@string/time_month" 
	            android:layout_height="wrap_content" 
	            android:layout_width="match_parent" 
	            android:id="@+id/textView4" 
	            android:layout_weight="50">
	        </TextView>
	        
	        <Spinner android:id="@+id/spinnerMonth" 
	            android:layout_width="match_parent" 
	            android:layout_height="wrap_content" 
	            android:layout_weight="30">
	        </Spinner>
	        
	    </LinearLayout>
	    <LinearLayout android:layout_height="wrap_content" 
	        android:layout_width="match_parent" 
	        android:orientation="horizontal">
	        
	        <TextView android:text="@string/time_Day" 
	            android:layout_height="wrap_content" 
	            android:layout_width="match_parent" 
	            android:id="@+id/textView3" 
	            android:layout_weight="50">
	        </TextView>
	        
	        <Spinner android:id="@+id/spinnerDay" 
	            android:layout_width="match_parent" 
	            android:layout_height="wrap_content" 
	            android:layout_weight="30">
	        </Spinner>
	        
	    </LinearLayout>
	    <LinearLayout android:layout_height="wrap_content" 
	        android:id="@+id/linearLayout4" 
	        android:layout_width="match_parent">

	        <TextView
	            android:id="@+id/textView6"
	            android:layout_width="match_parent"
	            android:layout_height="match_parent"
	            android:layout_gravity="center"
	            android:layout_weight="50"
	            android:text="@string/time_time" >

			</TextView>
	    	<LinearLayout android:layout_height="wrap_content" 
	    	    android:id="@+id/linearLayout4" 
	    	    android:layout_width="match_parent" 
	    	    android:layout_weight="30">
	    	    
		        <EditText android:text="00" 
		            android:id="@+id/timeHour" 
		            android:layout_width="match_parent" 
		            android:layout_height="wrap_content" 
		            android:inputType="number" 
		            android:layout_weight="30">
		        </EditText>
		        
		        <TextView android:text=" : " android:id="@+id/textView7" android:layout_width="wrap_content" android:layout_height="wrap_content" ></TextView>
	        	<EditText android:text="00" android:id="@+id/timeMin" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="30"></EditText>

	        	<Spinner
	        	    android:id="@+id/spinner4"
	        	    android:layout_width="wrap_content"
	        	    android:layout_height="match_parent" >
				</Spinner>
	        </LinearLayout>
	    </LinearLayout>
	    
	    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout4" android:layout_width="match_parent" android:orientation="horizontal">

   	        <TextView
   	            android:layout_width="wrap_content"
   	            android:layout_height="wrap_content"
   	            android:text="Longitude: " >
			</TextView>

	        <TextView
	            android:id="@+id/longitude_show"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="50"
	            android:text="0" >
			</TextView>

	        <TextView
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="50"
	            android:text="Latitude: " >
			</TextView>

	        <TextView
	            android:id="@+id/latitude_show"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="50"
	            android:text="0" >
			</TextView>        	        

	        <Button
	            android:id="@+id/setLocBtn"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="50"
	            android:text="@string/setloc" >
			</Button>
	    </LinearLayout>
	    <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
	        <TextView
	            android:id="@+id/addr_show"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="50"
	            android:text="" >
			</TextView>
        </LinearLayout>
        <EditText android:text="Title Here" 
            android:id="@+id/titleBox" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:inputType="textCapSentences" 
            android:layout_weight="30">
        </EditText>
        <EditText android:text="Details Here" 
            android:id="@+id/detailBox" 
            android:layout_width="match_parent" 
            android:layout_height="wrap_content" 
            android:inputType="textCapSentences" 
            android:layout_weight="30">
        </EditText>
	    <Button
	            android:id="@+id/uploadBtn"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_weight="90"
	            android:text="Upload" >
		</Button>
    </LinearLayout>
</LinearLayout>
</ScrollView>