<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical">
 	  <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/textView1" android:layout_gravity="center_horizontal" android:layout_margin="5dip" android:text="@string/home_details" android:textColor="#fcfcab" android:textSize="17sp"></TextView>
	  <LinearLayout
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal">
	    <LinearLayout 
	    android:orientation = "vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" android:layout_weight="150" android:gravity="center" android:layout_gravity="center_vertical">
	        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/home_form_email" android:id="@+id/textView1" android:layout_gravity="right" android:layout_marginRight="3dip"></TextView>
	    </LinearLayout>
	
	    <LinearLayout 
	    android:orientation = "vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" android:layout_weight="50">
	        <EditText android:text="TextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:phoneNumber="false" android:capitalize="words" android:id="@+id/user_email"></EditText>
	    </LinearLayout>    
	</LinearLayout>  
	<LinearLayout
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal">
	    <LinearLayout 
	    android:orientation = "vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" android:layout_weight="150" android:gravity="center" android:focusable="true">
	        <TextView android:id="@+id/textView1" android:text="@string/home_form_name" android:layout_gravity="right" android:layout_marginRight="3dip" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	    </LinearLayout>
	
	    <LinearLayout 
	    android:orientation = "vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" android:layout_weight="50">
	        <EditText android:text="TextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:phoneNumber="false" android:capitalize="words" android:id="@+id/user_name"></EditText>
	    </LinearLayout>    
	</LinearLayout>
	<LinearLayout
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content" android:orientation="horizontal" android:baselineAligned="true">
	    <LinearLayout 
	    android:orientation = "vertical"
	    android:layout_weight="150" android:gravity="center" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_gravity="center">
	        <TextView android:layout_width="wrap_content" android:id="@+id/textView1" android:text="@string/home_form_address" android:layout_gravity="right" android:layout_marginRight="3dip" android:layout_height="wrap_content"></TextView>
	    </LinearLayout>
	
	    <LinearLayout 
	    android:orientation = "vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" android:layout_weight="50">
	        <EditText android:text="TextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:phoneNumber="false" android:capitalize="words" android:id="@+id/user_address"></EditText>
	    </LinearLayout>    
	</LinearLayout>
	<LinearLayout
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content"
	  android:orientation="horizontal">
	    <LinearLayout 
	    android:orientation = "vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" android:layout_weight="150" android:gravity="center" android:layout_gravity="center">
	        <TextView android:layout_width="wrap_content" android:id="@+id/textView1" android:text="@string/home_form_detail" android:layout_gravity="right" android:layout_marginRight="3dip" android:layout_height="wrap_content"></TextView>
	    </LinearLayout>
	
	    <LinearLayout 
	    android:orientation = "vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent" android:layout_weight="50">
	        <EditText android:text="TextView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:phoneNumber="false" android:capitalize="words" android:id="@+id/user_detail"></EditText>
	    </LinearLayout>    
	</LinearLayout>
</LinearLayout>